welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:5: error: not found: value then
	if (estSurBiscuit()) then nbBiscuit = nbBiscuit + 1;
                             ^