welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit:Int = 0
while (nbBiscuit !=4 && (!estSurBiscuit())) {
	avance();
	if (estSurBiscuit()) then nbBiscuit = nbBiscuit + 1;
}
